add livereload for HTML, PHP, SASS files

--- a/app/index.html
+++ b/app/index.html
@@ -16,9 +16,19 @@
 		<div class="container">
 			<h1 class="page-header">Boilerplate for built-in PHP server</h1>
 
-			<p>Check <code>Gruntfile.js</code> for more details on tasks.</p>
+			<p>Check <code>Gruntfile.js</code> for more details on tasks or <a href="https://github.com/jabranr/php-server-boilerplate/#installation--how-to-use">read documentation</a>.</p>
+			<p>Add reference to following script for livereload:</p>
+			<p>
+				<code>
+					&lt;script src="http://localhost:35729/livereload.js"&gt;&lt;/script&gt;
+				</code>
+			</p>
 		</div>
 
 		<script src="js/main.js"></script>
+
+		<!-- Remove reference to following JS file for production/distribution phase -->
+		<script src="http://localhost:35729/livereload.js"></script>
+
 	</body>
 </html>
